pyquest/ql/test/semantic_analysis/valid/test015.ql
// Compatible types for less than operation
form testForm {
	"First Question"
	someIdentifier : boolean = 10.0 < 10
}