pyquest/ql/test/semantic_analysis/invalid/test020.ql
// Incompatible result type for addition operation
form testForm {
	"First Question"
	someIdentifier : integer = 10.1 + 10
}